--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,9 +1,10 @@
 .game {
   width: 100%;
   height: 100dvh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  padding: 1%;
+  place-items: center;
 }
 
 .game__board {
@@ -12,8 +13,31 @@
   grid-template-rows: repeat(5, 1fr);
   border: 20px solid #ffffff5e;
   place-items: center;
-  width: 50%;
-  min-width: 800px;
+  width: 90%;
+  min-width: 700px;
+  max-width: 900px;
   aspect-ratio: 16/10;
   border-radius: 5px;
+}
+
+.invalid-move {
+  animation: invalid-move 0.3s forwards;
+}
+
+@keyframes invalid-move {
+  0% {
+    transform: translateX(0);
+  }
+
+  20% {
+    transform: translateX(-3%);
+  }
+
+  60% {
+    transform: translateX(2%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
 }
