Added more translations

--- a/src/components/Actions/Actions.css
+++ b/src/components/Actions/Actions.css
@@ -1,40 +1,30 @@
 .game__actions {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 5%;
-  padding: 1%;
-  margin-inline: 5%;
-  place-content: center;
-  align-items: center;
+  display: flex;
   background-color: #7979a8;
-  border-radius: 10px;
+  width: 90%;
+  aspect-ratio: 16/2;
   animation: appear 0.1s forwards;
+  overflow: hidden;
+  align-items: center;
+  padding-inline: 2%;
+  gap: 3%;
 }
 
 .game__actions img {
-  width: 80%;
-  min-width: 70px;
-  max-width: 250px;
-  border-bottom: 5px solid transparent;
-}
-
-.game__actions button {
-  background: var(--red-gradient);
-  border: 2px solid var(--main-color);
-  font-family: stroke;
-  font-size: clamp(20px, 2vw, 40px);
   width: 100%;
-  min-width: 70px;
-  max-width: 250px;
-  aspect-ratio: 16/9;
-  cursor: pointer;
+  max-width: 150px;
+  border-bottom: 10px solid transparent;
 }
 
-.game__actions > button:nth-child(6) {
+.action {
+  flex-grow: 1;
+}
+
+.action.info {
   background: var(--blue-gradient);
-  border: 2px solid var(--hover-color);
+  border-color: var(--hover-color);
 }
 
-.game__actions button:hover {
+.action.info:hover {
   border-color: #fff;
 }
