--- a/src/components/BoxDisplay/BoxDisplay.css
+++ b/src/components/BoxDisplay/BoxDisplay.css
@@ -1,4 +1,4 @@
-.game__box {
+.box-display {
   width: 100%;
   aspect-ratio: 1/1;
   display: flex;
@@ -7,24 +7,33 @@
   color: #ffffff24;
   border: 5px solid transparent;
   font-size: clamp(30px, 3vw, 40px);
-  position: relative;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  background-color: transparent;
 }
 
-.game__box.ally img {
-  border-bottom: 5px solid #348ac7;
+
+.box-display img {
+  width: 100%;
 }
 
-.game__box.ally:hover {
-  border-color: #348ac7;
+.box-display.ally img {
+  border-bottom: 5px solid var(--ally-color);
+}
+
+.box-display.ally:hover {
+  border-color: var(--ally-color);
   cursor: pointer;
 }
 
-.game__box.enemy img {
-  border-bottom: 5px solid #b83231;
+.box-display.enemy img {
+  border-bottom: 5px solid var(--enemy-color);
 }
 
-.game__box.enemy:hover {
-  border-color: #b83231;
+.box-display.enemy:hover {
+  border-color: var(--enemy-color);
   cursor: pointer;
 }
 
@@ -35,34 +44,12 @@
 
 .box {
   background-image: url('src/assets/images/box.webp');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 
 .stimBeacon {
   background-image: url('src/assets/images/stim_beacon.webp');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  animation: level-up 2s forwards;
 }
 
-.smoke {
+.skySmoke {
   background: var(--blue-gradient);
-}
-
-.player img {
-  width: 100%;
-}
-
-@keyframes level-up {
-  from {
-    background: var(--blue-gradient);
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
 }
