--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   --main-color: #da3848;
+  --ally-color: #348ac7;
+  --enemy-color: #b83231;
   --hover-color: #00ffff;
   --red-gradient: linear-gradient(0deg, #cd515d 0%, #da3848 100%);
   --blue-gradient: linear-gradient(0deg, #7ea9ab 0%, #6a9a9c 100%);
