--- a/src/index.css
+++ b/src/index.css
@@ -38,19 +38,22 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html,
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  min-height: 100dvh;
+}
+
+html,
+body {
+  width: 100dvw;
+  max-width: 100dvw;
+  height: clamp(100vh, 100vh, auto);
 }
 
 #root {
-  width: 100vw;
-  min-height: 100dvh;
+  width: 100dvw;
+  max-width: 100dvw;
+  height: 100%;
   position: relative;
-}
-
-* {
-  box-sizing: border-box;
 }
